src/styles/App.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  font-weight: 400;

  --color-fg: rgba(255, 255, 255, 0.87);
  --color-bg: #242424;
  --color-pc: rgba(255, 255, 255, 0.1);
}

body {
  color: var(--color-fg);
  background-color: var(--color-bg);
}

html,
body {
  
  display: flex;
  margin: 0;
  padding: 0;
  align-items: center;
  justify-content: center;
}

.app {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 100vh;
  width: 100%;
  max-width: 1600px;
}

.header {
  padding: 2em;
  display: flex;
  flex-direction: row;
  width: 75%;
  
}

.title {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.title h1 {
  padding: 0;
  margin: 0;
  font-weight: 700;
  font-size: 3em;
}

.title h2 {
  font-weight: lighter;
}

.profile {
  flex: 1;
  display: flex;
  flex-direction: column;
}

.socials {
  height: 50%;
  display: flex;
  padding-top: 1em;
  justify-content: center;
}

.profile-pic {
  border-radius: 50%;
  border-color: var(--color-fg);
  border-width: 0.25em;
  border-style: solid;
  width: 175px;
  height: 175px;
  object-fit: cover;
}

.photo {
  height: 50%;
  min-height: 190px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.about-me {
  width: 75%;
  margin-bottom:10px;
}
.projects {
  display: flex;

  flex-wrap: wrap;
  width: 100%;
}

.project-card {
  margin: 1em;
  padding: 1em;
  border: 1px solid var(--color-fg);
  flex: 0 1 calc(33.333% - 2em);
  border-radius: 10px;
  transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
}

.project-card a {
  display: flex;
  justify-content: space-between;
}

.project-link {
  text-decoration: none;
  color: var(--color-fg);
}

.project-thumbnail {
  display: flex;
  justify-content: center;
  align-items: center;
}

.thumbnail-img {
  width: 75px;
  height: 75px;
  object-fit: cover;
}

.project-card:hover {
  background-color: var(--color-pc);
  transform: scale(1.02);
}

h2 {
  margin: 0;
  padding: 0;
}

.tech-pill {
  display: inline-block;
  background-color: #007bff;
  color: #fff;
  padding: 4px 8px;
  border-radius: 16px;
  margin-right: 8px;
  font-size: 14px;
  margin-top: 1em;
}

.content-header {
  padding-left: 1em;
  width: 75%;
  font-size: 1.5rem;
  margin-bottom: 10px;
}

/* Example media query for small screens */

@media (max-width: 1008px) {
  .content {
    min-width: 100%;
  }

  .about-me {
    width: calc(100%);
    padding-left: 2em;
    padding-right: 2em;
    padding-top: 0;
  }

  .project-card {
    flex: 0 1 calc(50% - 2em); /* 2 cards per row */
  }

  .content-header {
    padding-left: 2em;
    width: calc(100%);
    display: block;
  }
}

@media (max-width: 640px) {
  .header {
    flex-direction: column;
    padding: 0;
    margin-bottom: 20px;
  }

  .project-card {
    flex: 0 1 calc(100% - 2em);
  }

  .project-image {
    width: 100%;
    height: auto;
  }

  .about-me {
    padding-left: 1em;
    padding-right: 1em;
    width: calc(100%);
  }

  .content-header {
    padding-left: 1em;
    width: calc(100%);
    display: block;
  }

  .title {
    padding: 0;
    display: flex;
    align-items: center;
  }

  .title p {
    text-align: center;
  }
}

/* Style the social icons for the default state */
.socials a {
  color: rgba(128, 128, 128, 0.5); /* Transparent grey color */
  text-decoration: none;
  margin-right: 10px;
  font-size: 24px;
  transition: color 0.2s, transform 0.2s;
}

/* Style the social icons for the hover state */
.socials a:hover {
  color: var(--color-fg);
  transform: scale(1.1);
}

@media (prefers-color-scheme: light) {
  :root {
    --color-fg: #213547;
    --color-bg: #ffffff;
    --color-pc: rgba(0, 0, 0, 0.1);
  }
}

.about-link {
  color: #007bff;
  font-weight: bold;
  text-decoration: none;
}

.about-link:hover {
  text-decoration: underline;
}

